--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -326,11 +326,13 @@ The present data collection refers to data on formal childcare and other types o
 EXAMPLE
 \end{ex}
 
+\footnote{The complete running example in RDF is available at: \url{XXXXX}}
+
 \textbf{Aggregated Data in RDF.}
 As Eurostat provides aggregated data as CSV files, we can easily represent the two-dimensional table in RDF by means of \emph{PHDD}.
 \emph{PHDD} is a vocabulary to represent aggregated and person-level data in a rectangular format. 
 The data could be either represented in records with character-separated values (CSV) or in records with fixed length. 
-The two-dimensional table about \emph{formal childcare} can be downloaded as CSV file\footnote{CSV file and complete PHDD representation available at: \url{XXXXX}}. 
+The two-dimensional table about \emph{formal childcare} can be downloaded as CSV file. 
 The table is represented as \emph{phdd:Table} and structured by a table structure (\emph{phdd:TableStructure}, \emph{phdd:Delimited}).
 The running example table structure includes information about the character set (\emph{ASCII}), the variable delimiter (\emph{,}), the new line marker (\emph{CRLF}), and the first line where the data starts (\emph{2}).
 The table structure relates to the table columns (\emph{phdd:Column}) which are described by column descriptions (\emph{phdd:DelimitedColumnDescription}).
@@ -339,8 +341,9 @@ The RDFication enables further aggregations and calculations, e.g., in order to 
 % macht mehr sinn wenn Tabelle in mehreren Dimensionen vorhanden ist ode wenn Klassifikationen wie ISCO verwendet werden 
 
 \textbf{Metadata on Person-Level Data in RDF.}
-For a broader view of the data framework and more detailed analyses we refer to the metadata on person-level data collected for the series \emph{EU-SILC (European Union Statistics on Income and Living Conditions)}\footnote{\url{http://www.gesis.org/missy/eu/metadata/EU-SILC}}.
-The \emph{Microdata Information System (MISSY)}\footnote{\url{http://www.gesis.org/missy/eu/missy-home}} is an online service platform that provides systematically structured metadata for official statistics on European person-level data sets. This includes data documentation at the study and variable level as well as documentation materials, tools and further information. 
+For a broader view of the data framework and more detailed analyses we refer to the metadata on person-level data collected for the series \emph{EU-SILC (European Union Statistics on Income and Living Conditions)}\footnote{\url{http://www.gesis.org/missy/eu/metadata/EU-SILC}} 
+and publicly provided by the \emph{Microdata Information System (MISSY)}\footnote{\url{http://www.gesis.org/missy/eu/missy-home}}.
+\emph{Missy} is an online service platform that provides systematically structured metadata for official statistics on European person-level data sets. This includes data documentation at the study and variable level as well as documentation materials, tools and further information. 
 The aggregated variable \emph{formal childcare} is calculated on the basis of six person-level variables like 
 \emph{Education at pre-school}\footnote{\url{http://www.gesis.org/missy/eu/metadata/EU-SILC/2011/Cross-sectional/original#2011-Cross-sectional-RL010}}.
 %(2) Education at compulsory school,
@@ -349,35 +352,28 @@ The aggregated variable \emph{formal childcare} is calculated on the basis of si
 %(5) Child care by a professional child-minder, and
 %(6) Child care by grand-parents, household members, relatives, friends, neighbours.
 For each person-level variable detailed metadata is given (definitions and descriptions, theoretical concepts, underlying questions, code lists, frequencies and descriptive statistics, countries, year of data collection, classifications) enabling researchers to replicate the results shown in the aggregated data tables from Eurostat.
+Metadata on person-level data is represented in RDF using the \emph{Disco} vocabulary.
+The series (\emph{disco:StudyGroup}) \emph{EU-SILC} contains (\emph{disco:inGroup}) one study (\emph{disco:Study}) for each year (\emph{dcterms:temporal}) of data collection, e.g. \emph{EU-SILC 2011}.   
+The property \emph{dcterms:spatial} points to the countries (\emph{dcterms:Location} resources which are the same as \emph{GeoNames} resources representing these countries) for which the data has been collected.
+The study \emph{EU-SILC 2011} contains (\emph{disco:product}) eight person-level data sets (\emph{disco:LogicalDataSet}).
+Data sets include (\emph{disco:variable}) person-level variables (\emph{disco:Variable}) like the six ones needed to calculate the aggregated variable \emph{formal childcare}.
+\emph{DCAT} enables to represent aggregated and person-level data inside of data collections like repositories, catalogs, or archives. 
+\tb{ToDo: DCAT example}
+
 Metadata on person-level data enables researchers to investigate further research questions based on promising findings of other researchers in form of aggregated data.
 One common research question is ,e.g., the comparison of variables like 
 \emph{formal childcare} between countries, for which the variable is collected within the context of an individual survey, and other European or non European countries (e.g. OSCE).
 
-
-
-\emph{Disco} is a vocabulary to represent person-level data in RDF.
-
-\begin{ex}
-EXAMPLE
-\end{ex}
-
-\emph{DCAT} enables to represent aggregated and person-level data inside of data collections like repositories, catalogs, or archives. 
-
-\begin{ex}
-EXAMPLE
-\end{ex}
-
-The \emph{Simple Knowledge Organization System (SKOS)} is used multiple times within the context of aggregated and person-level (meta)data, e.g., to represent controlled vocabularies or hierarchies of \emph{SBE theoretical concepts} (e.g. education).
-
-\begin{ex}
-EXAMPLE
-\end{ex}
-
-\emph{XKOS}\footnote{\url{https://github.com/linked-statistics/xkos}} is a \emph{SKOS} extension to describe formal statistical classifications like the International Standard Classification of Occupations (\emph{ISCO}) and the Statistical classification of economic activities in the European Community \emph{NACE}.
-
-\begin{ex}
-EXAMPLE
-\end{ex}
+The \emph{Simple Knowledge Organization System (SKOS)} is used multiple times within the context of aggregated and person-level (meta)data.
+Variables, e.g., are constructed (\emph{disco:representation}) out of values (of one or multiple datatypes) and/or code lists.
+The values of the variable \emph{Education at pre-school}, representing the number of education hours during a usual week, are expressed as \emph{skos:Concepts}. 
+\emph{Disco} uses \emph{skos:OrderedCollection} to organize them in a particular order in a \emph{skos:memberList}. 
+SKOS is also used to form hierarchies of \emph{SBE theoretical concepts} (e.g. Education) with which variables may be associated.
+The compete hierarchy (\emph{skos:ConceptScheme}) of theoretical concepts (\emph{skos:Concepts}) of series is built using \emph{skos:narrower}.
+The variable \emph{Education at pre-school} is assigned to the theoretical concept \emph{Child Care} which is a narrower concept of \emph{Education} - one of the top concept of the series \emph{EU-SILC}.
+Controlled vocabularies serve as extension and reuse mechanism.
+For \emph{Disco}, concepts (\emph{skos:Concepts}), organized within controlled vocabularies (\emph{skos:ConceptSchemes}), indicate types of descriptive statistics (\emph{\emph{disco:SummaryStatistics}}) like minimum, maximum, mean, and standard deviation.
+From 2012 to 2015, SBE and Linked Data community members developed \emph{XKOS}\footnote{\url{https://github.com/linked-statistics/xkos}} - a SKOS extension to describe formal statistical classifications like the International Standard Classification of Occupations (\emph{ISCO}) and the Statistical Classification of Economic Activities in the European Community \emph{NACE}.
 
 \section{RDF Validation of Metadata and Data}
 \label{rdf-validation}
